--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <!-- 加载flv.js -->
+  <script src="https://cdn.bootcss.com/flv.js/1.4.0/flv.min.js"></script>
 </body>
 
 </html>
